--- a/example/miniprogram/app.json
+++ b/example/miniprogram/app.json
@@ -7,7 +7,8 @@
     "pages/transition/transition",
     "pages/overlay/overlay",
     "pages/col/col",
-    "pages/icon/icon"
+    "pages/icon/icon",
+    "pages/cell/cell"
   ],
   "window": {
     "navigationBarTitleText": "Kite",
