--- a/example/project.private.config.json
+++ b/example/project.private.config.json
@@ -5,6 +5,13 @@
     "miniprogram": {
       "list": [
         {
+          "name": "cell",
+          "pathName": "pages/cell/cell",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
           "name": "icon",
           "pathName": "pages/icon/icon",
           "query": "",
