feat: add action-sheet component

--- a/example/project.private.config.json
+++ b/example/project.private.config.json
@@ -5,6 +5,13 @@
     "miniprogram": {
       "list": [
         {
+          "name": "action-sheet",
+          "pathName": "pages/action-sheet/action-sheet",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
           "name": "button",
           "pathName": "pages/button/button",
           "query": "",
