--- a/example/miniprogram/app.json
+++ b/example/miniprogram/app.json
@@ -7,6 +7,7 @@
     "pages/space/space",
     "pages/flex/flex",
     "pages/cell/cell",
+    "pages/action-sheet/action-sheet",
     "pages/loading/loading",
     "pages/overlay/overlay",
     "pages/popup/popup",
