feat: add dialog component

--- a/example/project.private.config.json
+++ b/example/project.private.config.json
@@ -61,6 +61,13 @@
           "scene": null
         },
         {
+          "name": "dialog",
+          "pathName": "pages/dialog/dialog",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
           "name": "overlay",
           "pathName": "pages/overlay/overlay",
           "query": "",
