--- a/example/miniprogram/app.json
+++ b/example/miniprogram/app.json
@@ -8,6 +8,7 @@
     "pages/flex/flex",
     "pages/cell/cell",
     "pages/action-sheet/action-sheet",
+    "pages/dialog/dialog",
     "pages/loading/loading",
     "pages/overlay/overlay",
     "pages/popup/popup",
