feat: add toast component

--- a/example/miniprogram/app.json
+++ b/example/miniprogram/app.json
@@ -12,6 +12,7 @@
     "pages/loading/loading",
     "pages/overlay/overlay",
     "pages/popup/popup",
+    "pages/toast/toast",
     "pages/transition/transition"
   ],
   "window": {
